K8s/jenkins.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2022-08-17T10:01:24Z"
  generation: 1
  labels:
    app: jenkins
  name: jenkins
  namespace: default
  resourceVersion: "26482"
  uid: dc3dda6d-4d84-4dfa-8c61-cf200f3363fb
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: jenkins
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: jenkins
    spec:
      containers:
      - image: us.gcr.io/jimmy-359009/jenkins
        imagePullPolicy: Always
        name: jenkins
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 2
  conditions:
  - lastTransitionTime: "2022-08-17T10:01:38Z"
    lastUpdateTime: "2022-08-17T10:01:38Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2022-08-17T10:01:24Z"
    lastUpdateTime: "2022-08-17T10:01:38Z"
    message: ReplicaSet "jenkins-558c4d58cc" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 2
  replicas: 2
  updatedReplicas: 2
