K8s/nexus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2022-08-17T10:03:31Z"
  generation: 1
  labels:
    app: nexus
  name: nexus
  namespace: default
  resourceVersion: "27527"
  uid: 36829c0a-fa43-4569-b001-bf06bbf5c100
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: nexus
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nexus
    spec:
      containers:
      - image: us.gcr.io/jimmy-359009/nexus
        imagePullPolicy: Always
        name: nexus
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2022-08-17T10:03:48Z"
    lastUpdateTime: "2022-08-17T10:03:48Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2022-08-17T10:03:31Z"
    lastUpdateTime: "2022-08-17T10:03:48Z"
    message: ReplicaSet "nexus-5b595df7bb" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
