K8s/jenkins_svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
  creationTimestamp: "2022-08-17T10:31:08Z"
  labels:
    app: jenkins
  name: jenkins
  namespace: default
  resourceVersion: "40546"
  uid: b955d595-4f2f-48d6-b140-53c447941b31
spec:
  clusterIP: 10.0.4.207
  clusterIPs:
  - 10.0.4.207
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-8080
    nodePort: 31037
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: jenkins
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
