K8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
  creationTimestamp: "2022-08-17T10:31:08Z"
  labels:
    app: jenkins
  name: jenkins
  namespace: default
  resourceVersion: "40546"
  uid: b955d595-4f2f-48d6-b140-53c447941b31
spec:
  clusterIP: 10.0.4.207
  clusterIPs:
  - 10.0.4.207
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-8080
    nodePort: 31037
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: jenkins
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}

---

apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
  creationTimestamp: "2022-08-17T10:32:27Z"
  labels:
    app: nexus
  name: nexus
  namespace: default
  resourceVersion: "41169"
  uid: 072164bd-731f-45ad-ae6e-9c26d13bc327
spec:
  clusterIP: 10.0.4.169
  clusterIPs:
  - 10.0.4.169
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8081-8081
    nodePort: 32216
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: nexus
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}

---

apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
  creationTimestamp: "2022-08-17T10:28:32Z"
  labels:
    app: nginx
  name: nginx
  namespace: default
  resourceVersion: "39292"
  uid: 104c0e56-ab37-4a5b-80d8-2b571d3a729a
spec:
  clusterIP: 10.0.4.240
  clusterIPs:
  - 10.0.4.240
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 80-80
    nodePort: 31685
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
